--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
 <nav class="navbar">
-    <h1 class="nav-brand">Classroom</h1>
+    <h1 class="nav-brand">Classroom Project</h1>
 </nav>
 
 <main class="container">
